--- a/dev/styles/_setup.scss
+++ b/dev/styles/_setup.scss
@@ -7,20 +7,28 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 
 h1 {
-  font-size: 48px;
+    font-size: 48px;
 }
 h2 {
-  font-size: 36px;
+    font-size: 36px;
 }
 h3 {
-  font-size: 20px;
+    font-size: 20px;
 }
 h4 {
-  font-size: 18px;
+    font-size: 18px;
 }
 h5 {
-  font-size: 16px;
+    font-size: 16px;
 }
 p {
-  font-size: 14px;
+    font-size: 14px;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Roboto Slab', serif;
+}
+
+p, h5{
+    font-family: 'Poppins', sans-serif;
 }
