--- a/dev/styles/_skillsAndTools.scss
+++ b/dev/styles/_skillsAndTools.scss
@@ -7,6 +7,8 @@
 
 .skills-page {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .skills-page__header {
@@ -16,5 +18,18 @@
   h2 {
   margin-top: 62px;
   margin-bottom: 20px;
+  }
+}
+
+.skills-page__icons {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  margin-top: 100px;
+  i {
+    font-size: 100px;
+    color: black;
+    padding: 0 10px;
   }
 }
