--- a/dev/styles/_contact.scss
+++ b/dev/styles/_contact.scss
@@ -4,8 +4,8 @@
     margin-left: auto;
     display: flex;
     flex-direction: column;
+    background-color:  #f7f7f7;
 }
-
 .contact-page__header {
   display: flex;
   flex-direction: column;
@@ -13,5 +13,106 @@
   h2 {
   margin-top: 62px;
   margin-bottom: 20px;
+  }
+}
+
+.contact-page__mainContent {
+  display: flex;
+  justify-content: center;
+  .contact-page__emailInfo {
+    width: 350px;
+    text-align: center;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .contact-page__form {
+    width: 350px;
+    margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    h3 {
+      text-align: center;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      font-family: 'Poppins', sans-serif;
+      input {
+        border-radius: 4px;
+        border: 1px solid grey;
+        margin: 10px 0;
+        padding: 5px;
+        input:focus {
+          border: 1px solid black;
+        }
+      }
+      textarea {
+        height: 200px;
+        border-radius: 4px; 
+        border: 1px solid grey; 
+        margin: 10px 0;
+        padding: 5px;
+      }
+      input[type="submit"] {
+        background-color: rgba(231, 190, 3, 0.9);
+        color: white;
+        font-size: 10px;
+        border-radius: 4px;
+        height: 38px;
+        border: none;
+        transition: 0.7s;
+      }
+       input[type="submit"]:hover {
+         color: black;
+         background-color: gold;
+      }
+    } 
+  }
+}
+
+@media (max-width: 900px) {
+  #contact {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  .contact-page__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h2 {
+      margin-top: 0;
+    }
+  }
+  .contact-page__mainContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .contact-page__emailInfo {
+      margin-right: 0;
+    }
+    .contact-page__form {
+      margin-left: 0;
+      form {
+        textarea {
+          height: 80px;
+        }
+      }
+    }
+    }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .contact-page__mainContent {
+      .contact-page__emailInfo {
+        form {
+        width: 50%;
+      }
+    }
   }
 }
