--- a/dev/styles/_skillsAndTools.scss
+++ b/dev/styles/_skillsAndTools.scss
@@ -1,35 +1,67 @@
 #skills {
-    height: 100vh;
-    width: 86%;
-    margin-left: auto;
-    display: flex;
+		height: 100vh;
+		width: 86%;
+		margin-left: auto;
+		display: flex;
+		background-color:  white;
 }
 
 .skills-page {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .skills-page__header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  h2 {
-  margin-top: 62px;
-  margin-bottom: 20px;
-  }
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	h2 {
+	margin-top: 62px;
+	margin-bottom: 20px;
+	}
 }
 
 .skills-page__icons {
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: center;
-  align-items: center;  
-  margin-top: 100px;
-  i {
-    font-size: 100px;
-    color: black;
-    padding: 0 10px;
-  }
+	flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	align-items: center;  
+	margin-top: 50px;
+	i {
+		font-size: 100px;
+		color: black;
+		width: 20%;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		justify-content: center;
+		text-align: center;
+		margin: 10px;
+		box-shadow: 1px solid grey;
+	}
+}
+.skills-page__icons i a:hover {
+	box-shadow: 2px 2px 2px grey;
+}
+
+@media (max-width: 900px) {
+	#skills {
+		width: 100%
+	}  
+	.skills-page__icons i {
+		font-size: 80px;
+		width: 20%;
+	}
+	.skills-page__header {
+		h2 {
+			margin-top: 10px;
+			text-align: center;
+		}
+	}
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+
 }
