--- a/dev/styles/_works.scss
+++ b/dev/styles/_works.scss
@@ -1,9 +1,9 @@
 #works {
     height: 100vh;
-    width: calc(86%);
+    width: 86%;
     margin-left: auto;
     display: flex;
-    background-color:  #f7f7f7;
+    background-color:  none;
 }
 .works-page {
   width: 100%;
@@ -20,23 +20,64 @@
 .works-page__example {
   display: flex;
   align-items: center;
+  flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  margin-top: 72px;
+  margin-top: 50px;
   img {
     height: 331px;
     width: 44%;
+    border-radius: 4px;
   }
 }
-
 .works-page__example-information {
   line-height: 24px;
   width: 35%;
 }
+.flickity-page-dots .dot {
+  display: none;
+}
 
-
+.flickity-prev-next-button.previous {
+  display: none;
+}
 .carousel-cell {
   width: 100%; /* full width */
-  height: 80%; /* height of carousel */
   margin-right: 10px;
+}
+
+@media (max-width: 900px) {
+  #works {
+    width: 100%;
+  
+  }
+  .works-page__header {
+    h2 {
+      margin-top: 10px;
+    }
+  }
+  .works-page__example {
+    display: flex;
+    flex-direction: column;
+    // margin-top: 50px; 
+    img {
+      height: auto;
+      width: auto;
+    }
+  }  
+  .works-page__example-information {
+    width: auto;
+    text-align: center;
+  }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .works-page__example {
+    
+    img {
+      height: 200px;
+      width: 200px;
+    }
+  }
 }
