--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -171,7 +171,7 @@ p, h5 {
           align-items: center;
   top: 0;
   bottom: 0;
-  background-color: rgba(34, 34, 34, 0.95);
+  background-color: #222222;
   width: 14%;
   position: fixed; }
 
@@ -183,16 +183,26 @@ ul.sidebar-top__listItems {
   color: #999999; }
   ul.sidebar-top__listItems li a {
     text-decoration: none;
-    color: #999999; }
+    color: #999999;
+    font-size: 12px;
+    -webkit-transition: 0.7s;
+    transition: 0.7s; }
+  ul.sidebar-top__listItems li a:hover {
+    color: white; }
 
 .sidebar-bottom__icons i {
-  font-size: 14px;
+  font-size: 20px;
   text-decoration: none;
   color: #999999;
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+  -webkit-transition: 0.7s;
+  transition: 0.7s; }
 
 .sidebar-bottom__icons a {
   text-decoration: none; }
+
+.sidebar-bottom__icons i:hover {
+  color: white; }
 
 .sidebar-top__logo {
   display: -webkit-box;
@@ -214,6 +224,56 @@ ul.sidebar-top__listItems {
     color: #999999;
     margin: 0; }
 
+/* Large screen tweaks */
+/* Landscape phone to portrait tablet */
+@media (max-width: 900px) {
+  #sidebar {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    height: 14%;
+    z-index: 5;
+    position: fixed;
+    bottom: 0;
+    top: 86%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
+  ul.sidebar-top__listItems {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    line-height: 0; }
+    ul.sidebar-top__listItems li {
+      margin: 0 10px; }
+      ul.sidebar-top__listItems li a {
+        font-size: 14px; }
+  .sidebar-top__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 0;
+    height: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .sidebar-top__logo h5 {
+      display: none; }
+  .sidebar-bottom__icons a i {
+    margin-bottom: 0;
+    font-size: 25px; } }
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .sidebar-top__logo {
+    display: none; }
+  ul.sidebar-top__listItems li a {
+    font-size: 10px; } }
+
 #hero-page {
   height: 100vh;
   width: 86%;
@@ -233,7 +293,8 @@ ul.sidebar-top__listItems {
 .hero-page__text {
   margin: 0 auto;
   text-align: center;
-  color: white; }
+  color: white;
+  font-size: 16px; }
 
 .hero-page__buttons {
   display: -webkit-box;
@@ -248,15 +309,53 @@ ul.sidebar-top__listItems {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
-  .hero-page__buttons button {
+  .hero-page__buttons a {
     border-radius: 4px;
-    width: 140px;
-    height: 38px;
+    width: 142px;
+    height: 40px;
     margin: 10px 10px;
     background-color: rgba(231, 190, 3, 0.9);
     border: none;
     color: white;
-    font-size: 10px; }
+    font-size: 12px;
+    -webkit-transition: 0.6s;
+    transition: 0.6s;
+    text-decoration: none; }
+    .hero-page__buttons a p {
+      color: white;
+      text-decoration: none;
+      font-size: 12px; }
+
+a:hover {
+  background-color: black; }
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 900px) {
+  #hero-page {
+    width: 100%; } }
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .hero-page__text {
+    width: 75%; }
+    .hero-page__text h1 {
+      font-size: 30px; }
+    .hero-page__text h5 {
+      font-size: 16px; }
+  .hero-page__buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .hero-page__buttons button {
+      margin: 0 auto;
+      margin-bottom: 10px; } }
 
 #skills {
   height: 100vh;
@@ -264,7 +363,8 @@ ul.sidebar-top__listItems {
   margin-left: auto;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  background-color: white; }
 
 .skills-page {
   width: 100%;
@@ -303,20 +403,51 @@ ul.sidebar-top__listItems {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 100px; }
+  margin-top: 50px; }
   .skills-page__icons i {
     font-size: 100px;
     color: black;
-    padding: 0 10px; }
+    width: 20%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+    margin: 10px;
+    -webkit-box-shadow: 1px solid grey;
+            box-shadow: 1px solid grey; }
 
+.skills-page__icons i a:hover {
+  -webkit-box-shadow: 2px 2px 2px grey;
+          box-shadow: 2px 2px 2px grey; }
+
+@media (max-width: 900px) {
+  #skills {
+    width: 100%; }
+  .skills-page__icons i {
+    font-size: 80px;
+    width: 20%; }
+  .skills-page__header h2 {
+    margin-top: 10px;
+    text-align: center; } }
+
+/* Landscape phones and down */
 #works {
   height: 100vh;
-  width: calc(86%);
+  width: 86%;
   margin-left: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #f7f7f7; }
+  background-color: none; }
 
 .works-page {
   width: 100%; }
@@ -343,25 +474,107 @@ ul.sidebar-top__listItems {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 100%;
-  margin-top: 72px; }
+  margin-top: 50px; }
   .works-page__example img {
     height: 331px;
-    width: 44%; }
+    width: 44%;
+    border-radius: 4px; }
 
 .works-page__example-information {
   line-height: 24px;
   width: 35%; }
 
+.flickity-page-dots .dot {
+  display: none; }
+
+.flickity-prev-next-button.previous {
+  display: none; }
+
 .carousel-cell {
   width: 100%;
   /* full width */
-  height: 80%;
-  /* height of carousel */
   margin-right: 10px; }
 
+@media (max-width: 900px) {
+  #works {
+    width: 100%; }
+  .works-page__header h2 {
+    margin-top: 10px; }
+  .works-page__example {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .works-page__example img {
+      height: auto;
+      width: auto; }
+  .works-page__example-information {
+    width: auto;
+    text-align: center; } }
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .works-page__example img {
+    height: 200px;
+    width: 200px; } }
+
+#about {
+  height: 100vh;
+  width: 86%;
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #f7f7f7; }
+
+.about-page {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.about-page__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .about-page__header h2 {
+    margin-top: 62px;
+    margin-bottom: 20px; }
+
+.about-page__biography {
+  margin: 0 auto;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 75%; }
+
+@media (max-width: 900px) {
+  #about {
+    width: 100%; } }
+
+/* Landscape phones and down */
 #contact {
   height: 100vh;
   width: 86%;
@@ -372,7 +585,8 @@ ul.sidebar-top__listItems {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  background-color: #f7f7f7; }
 
 .contact-page__header {
   display: -webkit-box;
@@ -388,6 +602,123 @@ ul.sidebar-top__listItems {
   .contact-page__header h2 {
     margin-top: 62px;
     margin-bottom: 20px; }
+
+.contact-page__mainContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .contact-page__mainContent .contact-page__emailInfo {
+    width: 350px;
+    text-align: center;
+    margin-right: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .contact-page__mainContent .contact-page__form {
+    width: 350px;
+    margin-left: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .contact-page__mainContent .contact-page__form h3 {
+      text-align: center; }
+    .contact-page__mainContent .contact-page__form form {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      font-family: 'Poppins', sans-serif; }
+      .contact-page__mainContent .contact-page__form form input {
+        border-radius: 4px;
+        border: 1px solid grey;
+        margin: 10px 0;
+        padding: 5px; }
+        .contact-page__mainContent .contact-page__form form input input:focus {
+          border: 1px solid black; }
+      .contact-page__mainContent .contact-page__form form textarea {
+        height: 200px;
+        border-radius: 4px;
+        border: 1px solid grey;
+        margin: 10px 0;
+        padding: 5px; }
+      .contact-page__mainContent .contact-page__form form input[type="submit"] {
+        background-color: rgba(231, 190, 3, 0.9);
+        color: white;
+        font-size: 10px;
+        border-radius: 4px;
+        height: 38px;
+        border: none;
+        -webkit-transition: 0.7s;
+        transition: 0.7s; }
+      .contact-page__mainContent .contact-page__form form input[type="submit"]:hover {
+        color: black;
+        background-color: gold; }
+
+@media (max-width: 900px) {
+  #contact {
+    width: 100%;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .contact-page__header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .contact-page__header h2 {
+      margin-top: 0; }
+  .contact-page__mainContent {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .contact-page__mainContent .contact-page__emailInfo {
+      margin-right: 0; }
+    .contact-page__mainContent .contact-page__form {
+      margin-left: 0; }
+      .contact-page__mainContent .contact-page__form form textarea {
+        height: 80px; } }
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .contact-page__mainContent .contact-page__emailInfo form {
+    width: 50%; } }
 
 .container {
   max-width: 1440px;
