--- a/dev/styles/_sidebar.scss
+++ b/dev/styles/_sidebar.scss
@@ -102,7 +102,11 @@ ul.sidebar-top__listItems {
 }
 
 /* Landscape phones and down */
-@media (max-width: 480px) {
+@media (max-width: 520px) {
+    #sidebar {
+        display: flex;
+        flex-direction: column;
+    }
     .sidebar-top__logo {
         display: none;
     }
