--- a/dev/styles/_skillsAndTools.scss
+++ b/dev/styles/_skillsAndTools.scss
@@ -1,5 +1,4 @@
 #skills {
-		height: 100vh;
 		width: 86%;
 		margin-left: auto;
 		display: flex;
@@ -16,6 +15,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	padding-bottom: 30px;
 	h2 {
 	margin-top: 62px;
 	margin-bottom: 20px;
@@ -27,7 +27,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;  
-	margin-top: 50px;
+	margin-top: 20px;
+	padding-bottom: 62px;	
 	i {
 		font-size: 100px;
 		color: black;
@@ -65,6 +66,9 @@
 @media (max-width: 480px) {
 	.skills-page__icons {
 		margin-top: 10px;
+		i {
+			width: 35%;
+		}
 	}
 
 }
