--- a/dev/styles/_hero.scss
+++ b/dev/styles/_hero.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../../assets/wil-stewart-143331.jpg);
+    background-image: url(../../assets/bg.jpg);
     background-size: cover;
 }
 .hero-page__text {
