--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -299,7 +299,7 @@ ul.sidebar-top__listItems {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url(../../assets/wil-stewart-143331.jpg);
+  background-image: url(../../assets/bg.jpg);
   background-size: cover; }
 
 .hero-page__text {
